--- a/style.css
+++ b/style.css
@@ -23,7 +23,11 @@
     display: grid;
     margin: 0;
  } 
- h1,h2,h3,h4,h5{font-family: 'Belanosima', sans-serif;
+ h1,h2,h3{font-family: 'Belanosima', sans-serif;
+  justify-content: center;
+  text-align: center;
+ }
+ h4{font-family: 'Belanosima', sans-serif;
  }
 
  header{
@@ -50,6 +54,7 @@ nav,ul,li, li>a{
 }
 
 main{
+
   grid-template-columns:2 1fr;
   grid-template-rows: 4 100vw;
   grid-template-areas:
@@ -59,6 +64,10 @@ main{
   "ununo undos"
 
 }
+section {display: flex;}
+section>p{align-self: center;}
+
+
  .qsimg{
     grid-area: qsimg;
     width: 50vw;
@@ -78,6 +87,7 @@ main{
 .ununo{grid-area: unno;}
 .undos{grid-area: undos;}
 
+section{}
 
 
 
