--- a/style.css
+++ b/style.css
@@ -98,6 +98,7 @@ section>p{align-self: center;}
         display: flex;
         flex-direction: row;
         padding: 1rem;
+        justify-content: center;
     }
   header{
     height: 30vw;
