footer telefono y alineacion

--- a/style.css
+++ b/style.css
@@ -195,7 +195,6 @@ div a{
     "rs inst contacto"
   
   }
-  .rs{grid-area: rs;}
+/*   .rs{grid-area: rs;}
   .inst{grid-area: inst;}
-  .contacto{grid-area: contacto;}
-     */
+  .contacto{grid-area: contacto;} */
