--- a/style.css
+++ b/style.css
@@ -30,6 +30,9 @@
  h1{text-shadow: 10 px var(--color-background);}
  h4{font-family: 'Belanosima', sans-serif;
  }
+ h3{
+  font-size: 1.3rem;
+ }
 
  header{
 
@@ -135,7 +138,15 @@ footer{
 }
 div a{
   text-decoration: none;
+  color: var(--color-texto);
+
 }
+#volver{
+  text-decoration: none;
+  color: var(--color-texto);
+  text-align:center;
+}
+
 
 .rs{grid-area: rs;}
 .inst{grid-area: inst;}
@@ -145,9 +156,20 @@ div a{
   display: flex;
   flex-direction: column;
   align-items: center;
+
   justify-content: space-around;
 }
 
+
+a:hover{
+  background-color: var(--color-principal);
+  color: var(--color-background);
+}
+
+.icono{
+  width: 25px;
+  height: 25px;
+}
 
 
 
