--- a/style.css
+++ b/style.css
@@ -139,8 +139,9 @@ footer{
 div a{
   text-decoration: none;
   color: var(--color-texto);
-
+  align-self: flex-start;
 }
+
 #volver{
   text-decoration: none;
   color: var(--color-texto);
