--- a/style.css
+++ b/style.css
@@ -174,31 +174,51 @@ a:hover{
 
 
 
-@media (min-width: 460px){} 
+@media (min-width: 460px){
 
-@media (min-width: 768px)
+/* falta */
 
+} 
 
-{
+@media (min-width: 768px){
+header{
+background-size: cover;
+}
+
     nav,ul,li, li>a{
         display: flex;
         flex-direction: row;
         padding: 1rem;
         justify-content: center;
     }
+    .menu{
+      margin-bottom: -40px;
+    }
 
     
     nav li ul{
       display: flex;
+    
+    }
+    nav{
+      height: 10vw;
     }
   
 
 
-  header{
-    height: 30vw;
-  }
   section {display: flex;
   flex-direction: row;}
+
+/* seccion quienes somos y porque elegirnos */
+
+.qsimg, .limg{
+  margin: 20px 20px;
+  grid-area: qsimg;
+  width: 35vw;
+}
+
+
+
 
   /* ajuste imagenes propuesta */
 
@@ -206,8 +226,12 @@ a:hover{
     height: 20vh;
     width: 20vw;
     border-radius: 150px;
-  
   }
+  .propuestas{
+  padding:40px;
+  padding-left: 40px;
+
+  }}
 
   /* ajuste footer
   footer{
