--- a/stylecontacto.css
+++ b/stylecontacto.css
@@ -75,8 +75,66 @@ a:hover{
     color: var(--color-background);
   }
 
+.col, label{
+    color: var(--color-sinuso1);
+    font-size: 1.5rem;
+  }
+
+  input::placeholder{
+    color: var(--color-sinuso1);
+  }
+
+/*   .form-control:hover{
+    /* background-color: var(--color-principal); */
+
+/* 
+footer
+ */
+
+ footer{
+  display: grid;
+  grid-template-columns:3 1fr;
+  grid-template-rows: 1 100vw;
+  grid-template-areas:
+  "rs inst contacto";
+
+}
+div a{
+  text-decoration: none;
+  color: var(--color-texto);
+  align-self: flex-start;
+}
+
+#volver{
+  text-decoration: none;
+  color: var(--color-texto);
+  text-align:center;
+}
 
 
+.rs{grid-area: rs;}
+.inst{grid-area: inst;}
+.contacto{grid-area: contacto;}
+
+.rs, .inst,.contacto{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  justify-content: space-around;
+}
+
+
+
+
+
+.icono{
+  width: 25px;
+  height: 25px;
+}
+
+
+ */
 
 
 
