ajuste footer contacto

--- a/stylecontacto.css
+++ b/stylecontacto.css
@@ -105,55 +105,43 @@ input::placeholder {
 /*   .form-control:hover{
     /* background-color: var(--color-principal); */
 
-/* 
-footer
- */
-
-footer {
+/* ajustes footer */
+footer{
   display: grid;
-  grid-template-columns: 3 1fr;
-  grid-template-rows: 1 100vw;
+  
+  grid-template-columns:1;
+  grid-template-rows: 3;
   grid-template-areas:
-    "rs inst contacto";
+  "rs"
+  "inst"
+  "contacto";
+  
 
 }
-
-div a {
+div a{
   text-decoration: none;
   color: var(--color-texto);
-  align-self: flex-start;
+  align-self: center;
 }
 
-#volver {
+#volver{
   text-decoration: none;
   color: var(--color-texto);
-  text-align: center;
+  text-align:center;
 }
 
 
-.rs {
-  grid-area: rs;
-}
+.rs{grid-area: rs;}
+.inst{grid-area: inst;}
+.contacto{grid-area: contacto;}
 
-.inst {
-  grid-area: inst;
-}
-
-.contacto {
-  grid-area: contacto;
-}
-
-.rs,
-.inst,
-.contacto {
+.rs, .inst,.contacto{
   display: flex;
   flex-direction: column;
   align-items: center;
 
   justify-content: space-around;
 }
-
-
 
 
 
@@ -191,4 +179,41 @@ div a {
   nav {
     height: 10vw;
   }
+
+  /* ultimo ajuste footer */
+  footer{
+    display: grid;
+    grid-template-columns:3 1fr;
+    grid-template-rows: 1 100vw;
+    grid-template-areas:
+    "rs inst contacto";
+  
+  }
+  div a{
+    text-decoration: none;
+    color: var(--color-texto);
+    align-self: center;
+  }
+  
+  #volver{
+    text-decoration: none;
+    color: var(--color-texto);
+    text-align:center;
+  }
+  
+  
+  .rs{grid-area: rs;}
+  .inst{grid-area: inst;}
+  .contacto{grid-area: contacto;}
+  
+  .rs, .inst,.contacto{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  
+    justify-content: space-around;
+  }
+  
+  
+  
 }
