--- a/stylecontacto.css
+++ b/stylecontacto.css
@@ -106,36 +106,47 @@ input::placeholder {
     /* background-color: var(--color-principal); */
 
 /* ajustes footer */
-footer{
+footer {
   display: grid;
-  
-  grid-template-columns:1;
+
+  grid-template-columns: 1;
   grid-template-rows: 3;
   grid-template-areas:
-  "rs"
-  "inst"
-  "contacto";
-  
+    "rs"
+    "inst"
+    "contacto";
+
 
 }
-div a{
+
+div a {
   text-decoration: none;
   color: var(--color-texto);
   align-self: center;
 }
 
-#volver{
+#volver {
   text-decoration: none;
   color: var(--color-texto);
-  text-align:center;
+  text-align: center;
 }
 
 
-.rs{grid-area: rs;}
-.inst{grid-area: inst;}
-.contacto{grid-area: contacto;}
+.rs {
+  grid-area: rs;
+}
 
-.rs, .inst,.contacto{
+.inst {
+  grid-area: inst;
+}
+
+.contacto {
+  grid-area: contacto;
+}
+
+.rs,
+.inst,
+.contacto {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -181,39 +192,50 @@ div a{
   }
 
   /* ultimo ajuste footer */
-  footer{
+  footer {
     display: grid;
-    grid-template-columns:3 1fr;
+    grid-template-columns: 3 1fr;
     grid-template-rows: 1 100vw;
     grid-template-areas:
-    "rs inst contacto";
-  
+      "rs inst contacto";
+
   }
-  div a{
+
+  div a {
     text-decoration: none;
     color: var(--color-texto);
     align-self: center;
   }
-  
-  #volver{
+
+  #volver {
     text-decoration: none;
     color: var(--color-texto);
-    text-align:center;
+    text-align: center;
   }
-  
-  
-  .rs{grid-area: rs;}
-  .inst{grid-area: inst;}
-  .contacto{grid-area: contacto;}
-  
-  .rs, .inst,.contacto{
+
+
+  .rs {
+    grid-area: rs;
+  }
+
+  .inst {
+    grid-area: inst;
+  }
+
+  .contacto {
+    grid-area: contacto;
+  }
+
+  .rs,
+  .inst,
+  .contacto {
     display: flex;
     flex-direction: column;
     align-items: center;
-  
+
     justify-content: space-around;
   }
-  
-  
-  
+
+
+
 }
