--- a/stylecontacto.css
+++ b/stylecontacto.css
@@ -33,9 +33,9 @@ h3 {
   text-align: center;
 }
 
-h1 {
+/* h1 {
   text-shadow: 10 px var(--color-background);
-}
+} */
 
 h4 {
   font-family: 'Belanosima', sans-serif;
@@ -101,12 +101,17 @@ a:hover {
   box-shadow: 1px 1px 10px var(--color-texto)inset;
   border-radius: 10px;
 }
+
+div>h1{
+text-decoration: underline;
+}
+
 .btn{
   color: var(--color-texto);
   background-color: var(--color-sinuso1);
 }
 .btn:hover{
-  background-color: var(--color-principal);
+  background-color: var();
 }
 
 .col,
