--- a/style.css
+++ b/style.css
@@ -303,8 +303,8 @@ padding:20px 20px;
   }
 
   .propuestas {
-    padding: 40px;
-    padding-left: 40px;
+    padding: 20px;
+/*     padding-left: 40px; */
 
   }
 
